--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-TELEGRAM_TOKEN=7510443006:AAFbKeOonsOtZCdypk7oxiL5ym7z1lu2UCY
+BOT_TOKEN=ваш_токен_от_BotFather
+VK_GROUP_LINK=https://vk.com/sevgarant
+TG_CHANNEL_LINK=t.me/sevgarant
