--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
-BOT_TOKEN=ваш_токен_от_BotFather
+BOT_TOKEN=7510443006:AAFbKeOonsOtZCdypk7oxiL5ym7z1lu2UCY
 VK_GROUP_LINK=https://vk.com/sevgarant
 TG_CHANNEL_LINK=t.me/sevgarant
+
+ADMIN_IDS=5680616745  # Можно несколько через запятую
+GROUP_ID=-1002675570663  # Для логирования
